# loctok

./: .gitignore  Cargo.toml  PRD.md  README.md
.github/workflows/: release.yml
npm/: README.md  package.json  pnpm-lock.yaml
npm/scripts/: install.js
src/: lib.rs  main.rs
tests/: integration.rs
tests/fixtures/: .gitignore
tests/fixtures/nested/: kept2.txt
