[package]
name = "tokcount"
version = "0.1.0"
edition = "2021"
description = "CLI to count LLM tokens in a folder, respecting .gitignore"
license = "MIT OR Apache-2.0"

[lib]
name = "tokcount"
path = "src/lib.rs"

[[bin]]
name = "tokcount"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

