[package]
name = "loctok"
version = "0.1.0"
edition = "2021"
description = "Count LOC (lines of code) & TOK (LLM tokens), fast."
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["npm/"]
repository = "https://github.com/zxch3n/loctok"
authors = ["Zixuan Chen"]
keywords = ["loc", "lines-of-code", "tokens", "tiktoken", "llm"]
categories = [
    "command-line-utilities",
    "development-tools",
    "text-processing",
    "encoding",
    "filesystem",
]

[lib]
name = "loctok"
path = "src/lib.rs"

[[bin]]
name = "loctok"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.5"
tabled = { version = "0.15", features = ["derive"] }
num-format = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
debug = 0
